# mutt_vc_query

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  configure.ac  mutt_vc_query.spec  mutt_vc_query.spec_rh
doc/: .gitignore  Makefile.am  mutt_vc_query.1
src/: .gitignore  Makefile.am  main.c  result.c  result.h
test/: .gitignore  Makefile.am  test_mutt_vc_query.sh
